Update petapoco-abstractions-azure-pipelines.yml for Azure Pipelines

--- a/petapoco-abstractions-azure-pipelines.yml
+++ b/petapoco-abstractions-azure-pipelines.yml
@@ -21,6 +21,6 @@ steps:
     command: pack
     packagesToPack: '**/PetaPoco.Repository.Abstractions.csproj'
     versioningScheme: byPrereleaseNumber
-    majorVersion: '$(Major)'
-    minorVersion: '$(Minor)'
-    patchVersion: '$(Patch)'
+    majorVersion: '${{ parameters.Major }}'
+    minorVersion: '${{ parameters.Minor }}'
+    patchVersion: '${{ parameters.Patch }}'
