Update petapoco-abstractions-azure-pipelines.yml for Azure Pipelines

--- a/petapoco-abstractions-azure-pipelines.yml
+++ b/petapoco-abstractions-azure-pipelines.yml
@@ -25,3 +25,9 @@ steps:
     minorVersion: '${{ parameters.Minor }}'
     patchVersion: '${{ parameters.Patch }}'
     outputDir: '$(Build.ArtifactStagingDirectory)'
+    
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
