--- a/src/PetaPoco.Repository.Abstractions/PetaPoco.Repository.Abstractions.csproj
+++ b/src/PetaPoco.Repository.Abstractions/PetaPoco.Repository.Abstractions.csproj
@@ -6,7 +6,7 @@
     <PackageProjectUrl>https://github.com/TimBurris/PetaPoco.Repository</PackageProjectUrl>
     <Description>Classes and interfaces to jumpstart using PetaPoco with the Repository Pattern</Description>
     <PackageTags>Peta Poco Peta-Poco PetaPoco Repository Repository-Pattern microorm Micro-ORM ORM</PackageTags>
-    <PackageLicenseExpression>https://github.com/TimBurris/PetaPoco.Repository/blob/master/LICENSE</PackageLicenseExpression>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
