--- a/src/PetaPoco.Repository/PetaPoco.Repository.csproj
+++ b/src/PetaPoco.Repository/PetaPoco.Repository.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Tim Burris</Authors>
     <Description>Classes and interfaces to jumpstart using PetaPoco with the Repository Pattern</Description>
-    <PackageLicenseExpression>https://github.com/TimBurris/PetaPoco.Repository/blob/master/LICENSE</PackageLicenseExpression>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/TimBurris/PetaPoco.Repository</PackageProjectUrl>
     <PackageTags>Peta Poco Peta-Poco PetaPoco Repository Repository-Pattern microorm Micro-ORM ORM</PackageTags>
   </PropertyGroup>
