Update petapoco-abstractions-azure-pipelines.yml for Azure Pipelines

--- a/petapoco-abstractions-azure-pipelines.yml
+++ b/petapoco-abstractions-azure-pipelines.yml
@@ -14,7 +14,7 @@ steps:
   inputs:
     command: pack
     packagesToPack: '**/PetaPoco.Repository.Abstractions.csproj'
-    versioningScheme: byPrereleaseNumber
+    versioningScheme: byEnvVar
     versionEnvVar: VersionNumber
     outputDir: '$(Build.ArtifactStagingDirectory)'
     
