--- a/petapoco-abstractions-azure-pipelines.yml
+++ b/petapoco-abstractions-azure-pipelines.yml
@@ -3,11 +3,14 @@ parameters:
   - name: VersionNumber
     type: string 
     default: '0.0.'
-
+    
 trigger: none
 
 pool:
   vmImage: 'ubuntu-latest'
+
+variables:
+  packageVersion: ${{ VersionNumber }}
 
 steps:
 - task: DotNetCoreCLI@2
@@ -15,7 +18,7 @@ steps:
     command: pack
     packagesToPack: '**/PetaPoco.Repository.Abstractions.csproj'
     versioningScheme: byEnvVar
-    versionEnvVar: VersionNumber
+    versionEnvVar: packageVersion
     outputDir: '$(Build.ArtifactStagingDirectory)'
     
 - task: PublishBuildArtifacts@1
