Update petapoco-abstractions-azure-pipelines.yml for Azure Pipelines

--- a/petapoco-abstractions-azure-pipelines.yml
+++ b/petapoco-abstractions-azure-pipelines.yml
@@ -10,7 +10,7 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  packageVersion: $(VersionNumber)
+  packageVersion: ${{ parameters.VersionNumber }}
 
 steps:
 - task: DotNetCoreCLI@2
