-update to latest version of petapoco -swich transaction to use IDatabase instead of Concrete -include xml comments in build

--- a/src/PetaPoco.Repository.Abstractions/PetaPoco.Repository.Abstractions.csproj
+++ b/src/PetaPoco.Repository.Abstractions/PetaPoco.Repository.Abstractions.csproj
@@ -9,6 +9,10 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>bin\Release\netstandard2.0\\PetaPoco.Repository.Abstractions.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="PetaPoco.Core.Compiled" Version="5.1.306" />
   </ItemGroup>
