--- a/petapoco-repository-azure-pipelines.yml
+++ b/petapoco-repository-azure-pipelines.yml
@@ -22,6 +22,7 @@ steps:
     versioningScheme: byEnvVar
     versionEnvVar: packageVersion
     outputDir: '$(Build.ArtifactStagingDirectory)'
+    configuration: 'Release'
     
 - task: PublishBuildArtifacts@1
   inputs:
